--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 {% endblock %} 
 
 {% block body %}
-<h1>Login</h1>
+<h1>Register</h1>
 
 <form action="/" method="POST">
 <label for="username">Username:</label>
