--- a/templates/login.html
+++ b/templates/login.html
@@ -7,12 +7,13 @@
 {% block body %}
 <h1>Login</h1>
 
-<form action="/" method="POST">
+<form action="/login" method="POST">
 <label for="username">Username:</label>
-<input type="text" name="username" id="username" placeholder="Username">
+<input type="text" autocomplete="off" autofocus name="username" id="username" placeholder="Username">
 <br>
 <label for="password">Password:</label>
-<input type="password" name="Password" placeholder="Password" id="password">
+<input type="password" name="password" placeholder="Password" id="password">
+<input type="submit">
 </form>
 
 {% endblock %}
