--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,9 +25,11 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
+                    {%if session["user_id"]%}
                     <li class="nav-item">
                         <a class="nav-link" href="/sell">Sell Car</a>
                     </li>
+                    {% endif %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
