--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,21 +29,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/sell">Sell Car</a>
                     </li>
-                    {% endif %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/requests">Buy Requests</a>
                     </li>
+                    {% endif %}
+
                     <li class="nav-item">
                         <a class="nav-link disabled">Disabled</a>
                     </li>
