modify sell template

--- a/templates/addcar.html
+++ b/templates/addcar.html
@@ -24,20 +24,19 @@
                         placeholder="Model">
                     <br>
                     <label for="year" class="form-label">Year:</label>
-                    <input type="text" class="form-control" autocomplete="off" name="year" id="year"
-                        placeholder="Year">
+                    <input type="text" class="form-control" autocomplete="off" name="year" id="year" placeholder="Year">
                     <br>
-                    <label for="mileage" class="form-label">Mileage:</label>
+                    <label for="mileage" class="form-label">Mileage (km):</label>
                     <input type="text" class="form-control" autocomplete="off" name="mileage" id="mileage"
                         placeholder="Mileage">
                     <br>
-                    <label for="price" class="form-label">Price:</label>
+                    <label for="price" class="form-label">Price ($):</label>
                     <input type="text" class="form-control" autocomplete="off" name="price" id="price"
                         placeholder="Price">
                     <br>
                     <label for="technical" class="form-label">Technical Specifications:</label>
-                    <input type="text" class="form-control mb-3" autocomplete="off" name="technical" id="technical"
-                        placeholder="Technical Specifications">
+                    <textarea type="text" class="form-control mb-3" autocomplete="off" name="technical"
+                        id="technical">Technical Specifications</textarea>
 
                     <input class="btn btn-primary" type="submit" value="Sell Car">
                 </div>
