modify index display

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,11 +17,11 @@
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">{{car.make}}</h5>
+                    <h5 class="card-title">{{car.make}} -- {{car.model}}</h5>
                     <p class="card-text">{{car.technical}}.</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Model: {{car.model}}</li>
+
                     <li class="list-group-item">Added by: {{car.username}}</li>
                     <li class="list-group-item">Year: {{car.year}}</li>
                     <li class="list-group-item">Mileage: {{car.mileage|km}}</li>
