--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,26 @@
 {% block body%}
 <h1>Hello, {{username}}</h1>
 
-{% for car in cars %}
+
+
+
 <div class="container text-center mb-1">
     <div class="row">
         <div class="col">
 
         </div>
         <div class="col-6">
+            {% for req in appreqs%}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Congratulations!</strong> Your request No. {{req.request_id}} for buying {{req.car_make}}
+                {{req.car_model}} from {{req.seller_name}} has been approved.
+                <form action="/" method="POST">
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </form>
+            </div>
+            {% endfor %}
+
+            {% for car in cars %}
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
@@ -38,13 +51,14 @@
 
                 </div>
             </div>
+            {% endfor %}
         </div>
         <div class="col">
 
         </div>
     </div>
 </div>
-{% endfor %}
+
 
 
 {% endblock %}
