--- a/templates/addcar.html
+++ b/templates/addcar.html
@@ -11,10 +11,10 @@
 
         </div>
         <div class="col mt-3">
-            <h1 class="text-center">Sell Car</h1>
+            <h1 class="text-center text-light">Sell Car</h1>
 
             <form action="/sell" method="POST" enctype="multipart/form-data">
-                <div class="mb-3">
+                <div class="mb-3 text-light">
                     <label for="make" class="form-label">Make:</label>
                     <input type="text" class="form-control" autocomplete="off" autofocus name="make" id="make"
                         placeholder="Make">
