--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock%}
 
 {% block body%}
-<h1>Hello, {{username}}</h1>
+<h1 class="text-light">Hello, {{username}}</h1>
 
 
 
@@ -27,24 +27,24 @@
             {% endfor %}
 
             {% for imm in images %}
-            <div class="card">
+            <div class="card mb-3">
                 <img src="./static/images/{{imm.car_id}}/{{imm.img_id}}.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">{{imm.make}} -- {{imm.model}}</h5>
                     <p class="card-text">{{imm.technical}}.</p>
                 </div>
-                <ul class="list-group list-group-flush">
+                <ul class="list-group list-group-flush ">
 
-                    <li class="list-group-item">Added by: {{imm.username}}</li>
-                    <li class="list-group-item">Year: {{imm.year}}</li>
-                    <li class="list-group-item">Mileage: {{imm.mileage|km}}</li>
-                    <li class="list-group-item">price: {{imm.price| usd}}</li>
+                    <li class="list-group-item bg-dark text-light">Added by: {{imm.username}}</li>
+                    <li class="list-group-item bg-dark text-light">Year: {{imm.year}}</li>
+                    <li class="list-group-item bg-dark text-light">Mileage: {{imm.mileage|km}}</li>
+                    <li class="list-group-item bg-dark text-light">price: {{imm.price| usd}}</li>
                 </ul>
-                <div class="card-body">
+                <div class="card-body bg-dark">
                     {% if session["user_id"]!= imm.seller_id %}
                     <form action="/buy/{{imm.car_id}}" method="POST">
-                        <button class="btn btn-primary" {%for request in requests%} {%if imm.car_id==request['car_id']
-                            %} disabled {%endif %} {%endfor %}> Buy Car</button>
+                        <button class="btn btn-warning" {%for request in requests%} {%if imm.car_id==request['car_id']
+                            %} disabled {%endif %} {%endfor %}>Send Purchase Request</button>
                     </form>
 
                     {%endif%}
