--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block head %}{% endblock %}
+    <link rel="stylesheet" href="/static/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">CarSeller</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -30,24 +31,23 @@
                         <a class="nav-link" href="/sell">Sell Car</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/requests">Buy Requests</a>
+                        <a class="nav-link" href="/requests">Buy Requests <span class="badge text-bg-danger">{% if
+                                buyers %}{{buyers|length}}{%endif%}</span></a>
                     </li>
                     {% endif %}
 
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
+
                 </ul>
                 {% if session["user_id"] %}
                 <div class="d-flex">
-                    <a class="btn btn-outline-success me-4" href="/logout">Logout</a>
+                    <a class="btn btn-outline-light me-4" href="/logout">Logout</a>
                 </div>
                 {% elif not session["user_id"]%}
                 <div class="d-flex">
-                    <a class="btn btn-outline-success" href="/register">Register</a>
+                    <a class="btn btn-outline-light" href="/register">Register</a>
                 </div>
                 <div class="d-flex">
-                    <a class="btn btn-outline-success ms-3 me-4" href="/login">Login</a>
+                    <a class="btn btn-outline-light ms-3 me-4" href="/login">Login</a>
                 </div>
 
                 {% endif%}
