--- a/templates/login.html
+++ b/templates/login.html
@@ -10,8 +10,8 @@
         <div class="col">
 
         </div>
-        <div class="col mt-3">
-            <h1 class="text-center">Login</h1>
+        <div class="col text-light mt-3">
+            <h1 class="text-center text-light">Login</h1>
 
             <form action="/login" method="POST">
                 <div class="mb-3">
@@ -22,7 +22,7 @@
                     <label for="password" class="form-label">Password:</label>
                     <input type="password" name="password" class="form-control mb-3" placeholder="Password"
                         id="password">
-                    <input class="btn btn-primary" type="submit" value="Login">
+                    <input class="btn btn-dark btn-outline-light" type="submit" value="Login">
                 </div>
             </form>
         </div>
