--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,19 @@
 {% endblock%}
 
 {% block body%}
-<h1 class="text-light">Hello, {{username}}</h1>
 
 
 
 
-<div class="container text-center mb-1">
+
+<div class="container text-center mb-1 mt-5">
     <div class="row">
         <div class="col">
 
         </div>
         <div class="col-6">
+
+
             {% for req in appreqs%}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
                 <strong>Congratulations!</strong> Your request No. {{req.request_id}} for buying {{req.car_make}}
@@ -25,7 +27,7 @@
                 </form>
             </div>
             {% endfor %}
-
+            <h2 class=" bg-dark p-3 title text-light">Buy and Sell Cars</h2>
             {% for imm in images %}
             <div class="card mb-3">
                 <img src="./static/images/{{imm.car_id}}/{{imm.img_id}}.jpg" class="card-img-top" alt="...">
