--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">CarSeller</a>
+            <a class="navbar-brand" href="#">SellMyCar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -39,6 +39,12 @@
 
                 </ul>
                 {% if session["user_id"] %}
+                <ul class="navbar-nav d-flex me-4 mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Hello, {{username}}</a>
+                    </li>
+                </ul>
+
                 <div class="d-flex">
                     <a class="btn btn-outline-light me-4" href="/logout">Logout</a>
                 </div>
