--- a/templates/addcar.html
+++ b/templates/addcar.html
@@ -46,7 +46,7 @@
                     <textarea type="text" class="form-control mb-3" autocomplete="off" name="technical" id="technical"
                         placeholder="Write Specifications"></textarea>
 
-                    <input class="btn btn-primary" type="submit" value="Sell Car">
+                    <input class="btn btn-dark btn-outline-light" type="submit" value="Sell Car">
                 </div>
             </form>
         </div>
