--- a/templates/apology.html
+++ b/templates/apology.html
@@ -5,9 +5,30 @@
 {% endblock%}
 
 {% block body%}
-<h1>Error!</h1>
-<h2>{{top}}</h2>
-<h2>{{bottom}}</h2>
+
+<div class="container">
+    <div class="row">
+        <div class="col">
+
+        </div>
+        <div class="col text-light mt-3">
+
+            <div class="alert alert-danger" role="alert">
+                <p> Error!</p>
+                <p>{{top}}</p>
+                <p>{{bottom}}</p>
+
+            </div>
+
+
+        </div>
+        <div class="col">
+
+        </div>
+    </div>
+</div>
+
+
 
 
 {% endblock %}
